--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>OG Gadgets | Store</title>
+        <title>A.P.A Gadgets | Store</title>
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="styles.css" />
     </head>
@@ -15,14 +15,14 @@
                 </ul>
             </nav>
 <marquee behavior="scroll" direction="up" scrollamount="4">
-            <h1 class="band-name band-name-large">APA Gadgets</h1>
+            <h1 class="band-name band-name-large">A.P.A Gadgets</h1>
 </marquee>
             <center> <img src="Images/logo.png" width="300" height="300"> <br> </center> </p>
         </header>
 
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <h3 class="band-name">Contact us! 09173852235|Kegan#3691(Discord)</h3>
+                <h3 class="band-name">Contact us! 09063616800|Customer Service</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
